# seht

./: .gitignore  docker-compose.yml  readme.md
ci_cd/: api.Dockerfile
integration_tests/: pyproject.toml  test_from_cli_side.py
src/wh_control/: alembic.ini  pyproject.toml
src/wh_control/tests/: conftest.py  test_auth.py  test_auth_crypto.py  test_auth_with_db.py
src/wh_control/tests/tests_with_sess_rollback/: conftest.py  test_auth.py  test_auth_with_db.py  test_user_create.py
src/wh_control/warehouse_service/: __init__.py  configure_logging.py  experimental.py  project_setup.py
src/wh_control/warehouse_service/api/: auth.py  dependencies.py  main.py
src/wh_control/warehouse_service/application/: auth.py
src/wh_control/warehouse_service/domain/: auth.py  entities.py
src/wh_control/warehouse_service/dto/: auth.py
src/wh_control/warehouse_service/entities/: auth.py  vo.py  warehouse_items.py
src/wh_control/warehouse_service/factories/: auth.py  auth_interactors.py
src/wh_control/warehouse_service/infra/db/: __init__.py  sessionmaker.py  settings.py  user.py  warehouse.py
src/wh_control/warehouse_service/infra/db/migrations/: __init__.py  alembic.ini  env.py  migrations.py
src/wh_control/warehouse_service/infra/db/migrations/versions/: 6d8221311b34_.py  7f6150724846_initial.py
src/wh_control/warehouse_service/interactors/: auth.py
src/wh_control/warehouse_service/interactors/factories/: auth.py
src/wh_control/warehouse_service/repository/: auth_user.py
src/wh_control/warehouse_service/serializers/: auth.py
src/wh_control/warehouse_service/web_api/: auth.py  cookies.py  dependencies.py  main.py  serializers.py
webapi_tests/: test_from_cli_side.py
