[project]
name = "integration_tests"
version = "0.1.0"
description = "warehouse microservice (sample of code)"
authors = [{name = "Vladimir Gorbachuk", email = "vladimirgorbachuk@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "aiohttp>=3.12.14",
    "wh_service @ file://./src/wh_control",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.12.3",
    "mypy>=1.16.1",
]


[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"