[project]
name = "wh_service"
version = "0.1.0"
description = "warehouse microservice (sample of code)"
authors = [{name = "Vladimir Gorbachuk", email = "vladimirgorbachuk@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]==3.2.9",
    "uvicorn==0.35.0",
    "pydantic==2.11",
    "alembic==1.10.0",
    "celery==5.5.3",
    "faststream==0.5.44",
    "aiohttp>=3.12.14",
    "cryptography==45.0.5"
]

[project.scripts]
wh-service = "warehouse_service.api.main:init_app"
upgrade = "warehouse_service.infra.db.migrations.migrations:upgrade"


[project.optional-dependencies]
lint = [
    "ruff>=0.12.3",
    "mypy>=1.16.1",
]
tests = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "testcontainers[rabbitmq]>=4.10.0",
    "testcontainers[postgres]>=4.10.0"
]


[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
exclude = 'build'